<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveCourse</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <!-- 	General Purpose Strings -->
    <string name="no_results">No Results</string>
    <string name="no_chats">Empty Chat</string>
    <string name="no_history">No History</string>
    <string name="no_documents">No Documents</string>
        
    
    <!-- 	Settings Activity Strings -->
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_notification_setting">Notification Settings</string>
    <string name="pref_user_password">Change password</string>
    <string name="pref_user_password_summary">Set new password</string>
    <string name="pref_color_choice_title">Color</string>
	<string name="pref_color_choice_summary">Set your personal color preference</string>
    <string-array name="pref_color_choices">
		<item>Blue</item>
		<item>Red</item>
		<item>Brown</item>
		<item>Green</item>
		<item>Cyan</item>
		<item>Purple</item>
    </string-array>
    <string-array name="pref_color_choices_values">
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
        <item>4</item> 
        <item>5</item> 
	</string-array>
	<string name="pref_vibration_notification_title">Vibration</string>
	<string name="pref_vibration_notification_summary">Vibrate phone on notification</string>
    
    <!-- Options Menu Strings -->
	<string name="main_options_menu_settings">Settings</string>
	<string name="main_options_logout">Logout</string>
    <string name="options_menu_title">Test 1</string>
    <string name="options_sub_menu_1">Sub Menu 1</string>
    <string name="options_sub_menu_2">Sub Menu 2</string>
    
    <!-- 	ClassList Fragment Menu Strings
    		These are the strings used in the menu of the class list layout -->
    <string name="search_class_menu_item_title">Search Classes</string>
    <string name="add_class_by_qr_menu_item_title">Add Class By QR Code</string>
    		
    <!-- 	ClassList Fragment Context Menu Strings
    		These are the strings used in the context menu of the classlist fragment -->
    <string name="class_details_menu_item_title">View Class Information</string>
    <string name="delete_class_menu_item_title">Delete Class</string>
    
    <!-- 	Chat Layout Strings
    		These are the strings used in the chat fragment, 
    		which is the fragment responsible for seeing chat
    		messages and sending chat messages -->   
    <string name="send_button_title">Send</string>
    <string name="upload_button_title">Upload files and images</string>
    	
    <!-- 	Chat Fragment Menu Strings
    		These are the strings used in the menu of the chat layout -->
 	<string name="view_history_menu_item">View History</string>
 	<string name="view_documents_menu_item">View Documents</string>
 	
 	<!-- 	Chat Fragment Context Menu Strings
 			These are the strings used in the context menu of the chat fragment -->
 	<string name="participants_details_menu_item_title">View User</string>
 	<string name="ignore_chat_message_menu_item_title">Ignore Message</string>
 	<string name="ignore_participant_chat_message_menu_item_title">Ignore User</string>
 	 	
    <!-- 	Participants Fragment Context Menu Strings
    		These are the strings used in the context menu of the participants fragment -->
    <string name="participants_fragment_participants_details_menu_item_title">View User</string>
    <string name="participants_fragment_ignore_participant_chat_message_menu_item_title">Ignore User</string>
    
    
    <!-- 	Login Layout Strings
    		These are the strings used in the login activity,
    		which is the activity responsible for logging the
    		users into the app -->
    
    <string name="password_hint_text">Password</string>
    <string name="email_hint_text">Email</string>
    <string name="login_button_text">Login</string>
    <string name="livecourse_logo_text">LiveCourse Logo</string>
    <string name="save_creds_text">Save Credentials</string>
    
    <!-- 	Registration Layout Strings
    		These are the strings that are used in the registration
    		activity, which is the activity responsible for letting
    		users register. -->
    
    <string name="reg_text">Registration</string>
    <string name="reg_email_hint_text">Email</string>
    <string name="reg_password_hint_text">Password</string>
    <string name="reg_re_password_hint_text">Password</string>
    <string name="reg_button_text">Register</string>
    <string name="reg_display_name_text">Display Name</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    
    <!-- 	Document Fragment Menu String
    		These are the strings used in the menu of the documents fragment -->
    <string name="upload_from_camera_menu_item">Add File From Camera</string>
	<string name="upload_from_gallery_menu_item">Add File From Gallery</string>
	<string name="upload_from_file_explorer_menu_item">Add File From Explorer</string>
        
    <!-- 	History Activity Menu Strings
    		These are the strings that are used in the options menu of the history activity -->
    <string name="change_history_date_menu_item">Change Date</string>   
    
    <!-- 	ClassList Dialog Strings 
    		Bla bla bla etc etc -->
	<string name="classlist_dialog_item_crn_title">			CRN:			</string>   
	<string name="classlist_dialog_item_instructor_title">	Instructor:		</string>   
	<string name="classlist_dialog_item_type_title">		Type:			</string>   
	<string name="classlist_dialog_item_section_title">		Section:		</string>   
	<string name="classlist_dialog_item_location_title">	Location:		</string>   
	<string name="classlist_dialog_item_time_title">		Meet Times:		</string>   
	<string name="classlist_dialog_item_start_title">		Start Date:		</string>   
    <string name="classlist_dialog_item_end_title">			End Date:		</string>   
    <string name="classlist_dialog_item_capacity_title">	Capacity:		</string>   
    <string name="classlist_dialog_item_notes_title">		Notes:			</string>  
    <string name="classlist_dialog_button_negative">		OK				</string> 
    
    <!--  	ChatMessage Dialog Strings
    		Bla bla bla etc etc -->
   	<string name="chatmessage_dialog_item_file_title">		Attached File:	</string> 		
    <string name="chatmessage_dialog_button_negative">		OK				</string> 
    		
    <!-- 	Notes Fragment Strings -->
   	<string name="notes_list_view_footer_title">			(Add Section)	</string> 
   	
   	<!-- 	Notes Dialog strings -->
   	<string name="notes_dialog_button_positive">			Add Sub Note	</string> 
    <string name="notes_dialog_button_negative">			OK				</string> 
   	
   	<!-- 	Notes Add Notes Dialog Strings -->
   	<string name="notes_add_note_dialog_edit_text_hint">	Notes			</string> 
    <string name="notes_add_dialog_button_positive">		OK				</string> 
    <string name="notes_add_dialog_button_negative">		Cancel			</string> 
   			    

</resources>