<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<PreferenceCategory 
	    android:title="@string/pref_user_profile" >
        
        <EditTextPreference
            android:key="pref_display_name"
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary" />
        
		<ListPreference
		    android:key="pref_color"
		    android:defaultValue="0"
	        android:title="@string/pref_color_choice_title"
	        android:summary="@string/pref_color_choice_summary"
	        android:dialogTitle="@string/pref_color_choice_title"
	        android:entries="@array/pref_color_choices"
	        android:entryValues="@array/pref_color_choices_values" />
        
    </PreferenceCategory>
     
    <PreferenceCategory 
        android:title="@string/pref_notification_setting" >
		
        <CheckBoxPreference
            android:key="pref_vibration"
            android:defaultValue="true"
            android:title="@string/pref_vibration_notification_title" 
            android:summary="@string/pref_vibration_notification_summary" />
        
    </PreferenceCategory>
 
</PreferenceScreen>