<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="#2e587e" >
    
    <TextView
		android:id="@+id/reg_title_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/reg_text"
		android:textSize="30sp" 
		android:gravity="center"
		android:padding="10dp" />

	<ImageView
	    android:id="@+id/reg_logo_image_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/livecourse_logo_text"
	    android:gravity="center"
	    android:padding="10dp"
	    android:src="@drawable/paperairplanewhitebluebackground96" />
	
	<TextView
		android:id="@+id/error_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
	    android:padding="10dp"
	    android:textIsSelectable="false"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	
	<EditText
	    android:id="@+id/reg_email_edit_text_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/reg_email_hint_text"
	    android:inputType="textEmailAddress"
	    android:gravity="center"
	    android:padding="10dp" >
  		<requestFocus />
	</EditText>
	
	<EditText
	    android:id="@+id/reg_display_name_edit_text_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/reg_display_name_text"
	    android:gravity="center"
	    android:padding="10dp" />
	
	<EditText
	    android:id="@+id/reg_password_edit_text_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/reg_password_hint_text"
	    android:inputType="textPassword"
	    android:gravity="center"
	    android:padding="10dp" />
	    
	<EditText
	    android:id="@+id/reg_re_password_edit_text_view"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/reg_re_password_hint_text"
	    android:inputType="textPassword"
	    android:gravity="center"
	    android:padding="10dp" />
	
	<Button
        android:id="@+id/reg_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_button_text"
        android:gravity="center"
	    android:padding="10dp"
		android:layout_margin="10dp"
	    android:background="@drawable/login_button_selector" />

    

</LinearLayout>