<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <LinearLayout
	    android:layout_width="100dp"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_marginLeft="20dp" >
	    
        <TextView
			android:id="@+id/classlist_dialog_item_crn_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" 
			android:text="@string/classlist_dialog_item_crn_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_instructor_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" 	 
			android:text="@string/classlist_dialog_item_instructor_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_type_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_type_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_section_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_section_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_location_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_location_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_time_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_time_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_start_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_start_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_end_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_end_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_capacity_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_capacity_title" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_notes_title_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/classlist_dialog_item_notes_title" />
   	
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_marginRight="20dp" >
        
        <TextView
			android:id="@+id/classlist_dialog_item_crn_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_instructor_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_type_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_section_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_location_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_time_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_start_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_end_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_capacity_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
			android:id="@+id/classlist_dialog_item_notes_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:lines="1"
			android:ellipsize="end"
			android:textAppearance="?android:attr/textAppearanceSmall" />
   	
	</LinearLayout>
    
    

</LinearLayout>